--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,23 @@
 import templates.*
 
+defaultTasks 'installApp'
+
+group = 'trawl'
+
 apply plugin: 'maven'
+apply plugin: 'templates'
+apply plugin: 'scala'
+apply plugin: 'scalatest'
+apply plugin: 'application'
+
+mainClassName = 'HelloWorld'
+
+ext {
+    versions = [
+        scala: '2.10.3',
+        scalatest: '2.0.M3'
+    ]
+}
 
 buildscript {
 	repositories {
@@ -9,30 +26,28 @@ buildscript {
 	}
 	dependencies {
 		classpath group: 'gradle-templates', name:'gradle-templates', version: '1.4'
+        classpath 'com.github.maiflai:gradle-scalatest:0.2'
 	}
 }
-apply plugin: 'templates'
-apply plugin: 'scala'
-
-group = 'trawl'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	// Libraries needed to run the scala tools
-	scalaTools "org.scala-lang:scala-compiler:${scalaVersion}",
-	           "org.scala-lang:scala-library:${scalaVersion}"
-
 	// Libraries needed for scala api
 	compile "org.scala-lang:scala-library:${scalaVersion}"
+    testCompile 'org.scalatest:scalatest_2.10:2.0'
+    testRuntime 'org.pegdown:pegdown:1.1.0'
 }
 
-
 compileScala {
-	scalaCompileOptions.useCompileDaemon = true
+	scalaCompileOptions.useCompileDaemon = false
 
 	// optionally specify host and port of the daemon:
-	scalaCompileOptions.daemonServer = 'localhost:4243'
+	// scalaCompileOptions.daemonServer = 'localhost:4243'
+}
+
+tasks.withType(ScalaCompile) {
+	scalaCompileOptions.useAnt = false
 }
